--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "express": "^4.17.2",
     "puppeteer": "^13.0.1"
+  },
+  "engines": {
+    "node": ">= 6.9.4",
+    "npm": ">= 4.4.0"
   }
 }
